Remove worker schedule settings from API config

--- a/IYSIntegration.API/appsettings.json
+++ b/IYSIntegration.API/appsettings.json
@@ -11,10 +11,24 @@
     // "SfdcMasterData": "Data Source=DMMDPDBAL1;Initial Catalog=SfdcMasterData;uid=sfdcuser;pwd=;Pooling=true; Max Pool Size=300"
   },
   "AllowedHosts": "*",
-  "MultipleConsentQueryCheckAfter": "60",
   "RefreshTokenExpiresIn": "14400",
   "BaseUrl": "https://api.sandbox.iys.org.tr",
   "LogPath": "E:\\Logs\\IYS\\API",
+  "MultipleConsentQueryBatchCount": 100,
+  "MultipleConsentBatchCount": "200",
+  "MultipleConsentBatchSize": 100,
+  "SingleConsentProcessRowCount": 80,
+  "RunAsSingle": true,
+  "PullConsentBatchSize": 100,
+  "SfConsentProcessRowCount": 100,
+  "IYSErrorMail": {
+    "Schedule": "0 15 8 * * *",
+    "Subject": "IYS Hata Alan Kayitlar",
+    "To": "mehmet.durmaz@reateknoloji.com;gulay.celik@borusanotomotiv.com;berkay.duru@borusanotomotiv.com;melike.yegul@borusanotomotiv.com",
+    "From": "iys@borusanotomotiv.com",
+    "FromDisplayName": "IYS Hata Bildirimi",
+    "Url": "https://smartdms.borusanotomotiv.com/MainNode/BoomiEntegration.svc"
+  },
   "BOI": {
     "IysCode": "681602",
     "BrandCode": "617653"
