Refactor consent error reporting

--- a/IYSIntegration.API/appsettings.json
+++ b/IYSIntegration.API/appsettings.json
@@ -11,10 +11,16 @@
     // "SfdcMasterData": "Data Source=DMMDPDBAL1;Initial Catalog=SfdcMasterData;uid=sfdcuser;pwd=;Pooling=true; Max Pool Size=300"
   },
   "AllowedHosts": "*",
-  "MultipleConsentQueryCheckAfter": "60",
   "RefreshTokenExpiresIn": "14400",
   "BaseUrl": "https://api.sandbox.iys.org.tr",
   "LogPath": "E:\\Logs\\IYS\\API",
+  "MultipleConsentQueryBatchCount": 100,
+  "MultipleConsentBatchCount": "200",
+  "MultipleConsentBatchSize": 100,
+  "SingleConsentProcessRowCount": 80,
+  "RunAsSingle": true,
+  "PullConsentBatchSize": 100,
+  "SfConsentProcessRowCount": 100,
   "BOI": {
     "IysCode": "681602",
     "BrandCode": "617653"
