Refactor pull consent to use company code and config

--- a/IYSIntegration.API/appsettings.Production.json
+++ b/IYSIntegration.API/appsettings.Production.json
@@ -13,6 +13,8 @@
   "RefreshTokenExpiresIn": "14400",
   "BaseUrl": "https://api.iys.org.tr",
   "LogPath": "D:\\Logs\\IYS\\API",
+  "PullConsentBatchSize": 100,
+  "PullConsentAfter": "",
   "BOI": {
     "IysCode": "679648",
     "BrandCode": "679648"
