--- a/IYSIntegration.API/appsettings.json
+++ b/IYSIntegration.API/appsettings.json
@@ -20,6 +20,7 @@
   "SingleConsentProcessRowCount": 80,
   "RunAsSingle": true,
   "PullConsentBatchSize": 100,
+  "PullConsentAfter": "",
   "SfConsentProcessRowCount": 100,
   "IYSErrorMail": {
     "Schedule": "0 15 8 * * *",
