--- a/IYSIntegration.API/appsettings.Production.json
+++ b/IYSIntegration.API/appsettings.Production.json
@@ -10,11 +10,10 @@
     "SfdcMasterData": "Data Source=DMMDPDBAL1;Initial Catalog=SfdcMasterData;uid=sfdcuser;pwd=;Pooling=true; Max Pool Size=300"
   },
   "AllowedHosts": "*",
+  "MultipleConsentQueryCheckAfter": "60",
   "RefreshTokenExpiresIn": "14400",
   "BaseUrl": "https://api.iys.org.tr",
   "LogPath": "D:\\Logs\\IYS\\API",
-  "PullConsentBatchSize": 100,
-  "PullConsentAfter": "",
   "BOI": {
     "IysCode": "679648",
     "BrandCode": "679648"
