Load company codes from configuration

--- a/IYSIntegration.API/appsettings.Production.json
+++ b/IYSIntegration.API/appsettings.Production.json
@@ -14,6 +14,7 @@
   "RefreshTokenExpiresIn": "14400",
   "BaseUrl": "https://api.iys.org.tr",
   "LogPath": "D:\\Logs\\IYS\\API",
+  "CompanyCodes": [ "BOI", "BOP", "BOPK", "BOM" ],
   "BOI": {
     "IysCode": "679648",
     "BrandCode": "679648"
