--- a/IYSIntegration.API/appsettings.json
+++ b/IYSIntegration.API/appsettings.json
@@ -14,7 +14,8 @@
   "MultipleConsentQueryCheckAfter": "60",
   "RefreshTokenExpiresIn": "14400",
   "BaseUrl": "https://api.sandbox.iys.org.tr",
-  "LogPath": "E:\\Logs\\IYS\\API",
+  "LogPath": "E\\Logs\\IYS\\API",
+  "CompanyCodes": [ "BOI", "BOP", "BOPK", "BOM" ],
   "BOI": {
     "IysCode": "681602",
     "BrandCode": "617653"
