--- a/IYSIntegration.WorkerService/appsettings.json
+++ b/IYSIntegration.WorkerService/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "SfdcMasterData": "Data Source=DMMDPDBAL1;Initial Catalog=SfdcMasterData;uid=sfdcuser;pwd=sfdcuser123;Pooling=true; Max Pool Size=300"
   },
+  "CompanyCodes": [ "BOI", "BOP", "BOPK", "BOM" ],
   "BOI": {
     "IysCode": "679648",
     "BrandCode": "679648"
