chore: create application layer

--- a/IYSIntegration.Scheduled/IYSIntegration.Scheduled.csproj
+++ b/IYSIntegration.Scheduled/IYSIntegration.Scheduled.csproj
@@ -18,5 +18,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\IYSIntegration.Common\IYSIntegration.Common.csproj" />
+    <ProjectReference Include="..\IYSIntegration.Application\IYSIntegration.Application.csproj" />
   </ItemGroup>
 </Project>
