--- a/IYSIntegration.Application/IYSIntegration.Application.csproj
+++ b/IYSIntegration.Application/IYSIntegration.Application.csproj
@@ -1,21 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.14" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="EPPlus" Version="7.3.1" />
+    <PackageReference Include="System.ServiceModel.Http" Version="4.8.0" />
+    <PackageReference Include="System.ServiceModel.Primitives" Version="4.8.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\IYSIntegration.Common\IYSIntegration.Common.csproj" />
-    <ProjectReference Include="..\IYSIntegration.Application\IYSIntegration.Application.csproj" />
   </ItemGroup>
-
 </Project>
