--- a/IYSIntegration.Common/IYSIntegration.Common.csproj
+++ b/IYSIntegration.Common/IYSIntegration.Common.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Serilog.Sinks.Graylog" Version="3.1.1">
       <TreatAsUsed>true</TreatAsUsed>
     </PackageReference>
+    <PackageReference Include="StackExchange.Redis" Version="2.8.14" />
   </ItemGroup>
 
 </Project>
