--- a/IYSIntegration.API/appsettings.Production.json
+++ b/IYSIntegration.API/appsettings.Production.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "SfdcMasterData": "Data Source=DMMDPDBAL1;Initial Catalog=SfdcMasterData;uid=sfdcuser;pwd=;Pooling=true; Max Pool Size=300"
+    "SfdcMasterData": "Data Source=DMMDPDBAL1;Initial Catalog=SfdcMasterData;uid=sfdcuser;pwd=sfdcuser123;Pooling=true; Max Pool Size=300"
   },
   "AllowedHosts": "*",
   "MultipleConsentQueryCheckAfter": "60",
