Add SimpleRestClient for proxy calls

--- a/IYSIntegration.API/appsettings.json
+++ b/IYSIntegration.API/appsettings.json
@@ -14,6 +14,7 @@
   "MultipleConsentQueryCheckAfter": "60",
   "RefreshTokenExpiresIn": "14400",
   "BaseUrl": "https://api.sandbox.iys.org.tr",
+  "IysProxyBaseUrl": "http://bomdvdigip02/iysproxy/api/IYSProxy",
   "LogPath": "E\\Logs\\IYS\\API",
   "CompanyCodes": [ "BOI", "BOP", "BOPK", "BOM" ],
   "BOI": {
